--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/HomeXLabs/open-mail-app-flutter
 
 environment:
   sdk: ">=2.3.0 <3.0.0"
-  flutter: ">=1.10.0"
+  flutter: ">=1.12.0 <2.0.0"
 
 dependencies:
   url_launcher: ^5.4.5
