--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: open_mail_app
 description: This library provides the ability to query the device for installed email apps and open those apps
-version: 0.1.0-nullsafety.3
+version: 0.1.0
 homepage: https://github.com/HomeXLabs/open-mail-app-flutter
 
 environment:
-  sdk: ">=2.12.0-29.10.beta <3.0.0"
-  flutter: ">=1.12.0 <2.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=1.12.0"
 
 dependencies:
-  url_launcher: ^6.0.0-nullsafety.1
+  url_launcher: ^6.0.2
   flutter:
     sdk: flutter
 
