--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: open_mail_app
 description: This library provides the ability to query the device for installed email apps and open those apps
-version: 0.2.0
+version: 0.3.0
 homepage: https://github.com/HomeXLabs/open-mail-app-flutter
 
 environment:
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.12.0"
 
 dependencies:
+  platform: ^3.0.2
   url_launcher: ^6.0.2
   flutter:
     sdk: flutter
