--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -50,6 +50,7 @@
         <string>ms-outlook</string>
         <string>ymail</string>
         <string>fastmail</string>
+        <string>protonmail</string>
     </array>
 </dict>
 </plist>
