--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdk 33
-
+    namespace = "com.homex.open_mail_app"
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
